This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

21-Dec-2004 (Lars Duening)  (3.3.632)
  - (lex.c) The number parsing now recognizes overflows and forces these
       numbers to be LONG_MAX (Bug #0000327).
  - (mstrings.c) mstring_realloc_string() (used for example to append
       to strings) didn't check if the string was indirectly tabled,
       potentially freeing memory which was still in use otherwise
       (reported by Bardioc).
  - (settings/evermore) Updated to the latest version.
  - (prolang.y, interpret.c) The array indexing warnings are now controlled
       by the warn_deprecated pragma (Bug #0000325).

18-Dec-2004 (Lars Duening)  (3.3.631)
  - (interpret.c) Assignments to negative-sized ranges now throw
       an error; indexing of ranges with out of bounds limits generate
       warnings (Bug #0000325).
  - (interpret.c) In DEBUG mode: when setting up an inherited call, check
       that the given inherit index is sensible.

17-Dec-2004 (Lars Duening)  (3.3.630)
  - (xalloc) Added a new function prexalloc() to re-allocate permanent
       memory.
  - (pkg-tls.c) The allocator for the TLS package of course needs to
       allocate permanent memory so that the GC won't deallocate
       the library's memory (Bug #0000323).

11-Dec-2004 (Lars Duening)  (3.3.629)
  - (gcollect.c) Closures found to be bound to destructed objects are
       replaced by 0s, not #'undef closures (Bug #0000322).
  - (closure) The function store_undef_closure() is no longer needed.

09-Dec-2004 (Lars Duening)  (3.3.628)
  - (xalloc.c) Modified xalloc() to accept allocations of size 0 (again as the
       C standard demands).

07-Dec-2004 (Lars Duening)  (3.3.627)
  - (pkg-tls.c) Added allocation wrapper so that gnutls allocations can 
       be traced using the driver's mechanisms (thanks, Peng!)
  - (xalloc.c) Modified rexalloc() and xfree() to accept NULL pointers