@@ -54,23 +54,20 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 632)
-(Parent-Version lpmud 3-3 631)
+(Project-Version lpmud 3-3 633)
+(Parent-Version lpmud 3-3 632)
 (Version-Log "
-  - (lex.c) The number parsing now recognizes overflows and forces these
-       numbers to be LONG_MAX (Bug #0000327).
-  - (mstrings.c) mstring_realloc_string() (used for example to append
-       to strings) didn't check if the string was indirectly tabled,
-       potentially freeing memory which was still in use otherwise
-       (reported by Bardioc).
-  - (settings/evermore) Updated to the latest version.
-  - (prolang.y, interpret.c) The array indexing warnings are now controlled
-       by the warn_deprecated pragma (Bug #0000325).
+  - (prolang.y) The no-warn-deprecated opcodes weren't included in the
+       size calculations for the lvalue indexing shuffling.
+  - (lex.c, efuns.c) The overflow checking in the number parsing routine
+       was overeager, causing Evermore to no longer boot. The checking
+       now really compares against the largest possible number, instead
+       of simply checking the sign (Bug #0000327).
 ")
 (New-Version-Log 
 ""
 )
-(Checkin-Time "Wed, 22 Dec 2004 00:47:43 -0700")
+(Checkin-Time "Wed, 22 Dec 2004 15:20:12 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -108,7 +105,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.12 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.83 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.695 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.696 644))
   (HISTORY (lpmud/f/49_HISTORY 1.385 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -186,7 +183,7 @@
   (src/ed.h (lpmud/f/34_ed.h 1.5.1.6 644))
   (src/ed.c (lpmud/c/33_ed.c 1.32.1.35 644))
   (src/efuns.h (lpmud/l/20_efuns.h 1.13.1.19.1.6 644))
-  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.104 644))
+  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.104.1.1 644))
   (src/exec.h (lpmud/c/32_exec.h 1.34.1.33.1.7 644))
   (src/files.h (lpmud/i/49_files.h 1.2 644))
   (src/files.c (lpmud/i/50_files.c 1.26 644))
@@ -201,7 +198,7 @@
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.39 644))
   (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.79 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.11 644))
-  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.74.1.1 644))
+  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.74.1.2 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.19 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.67 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.20 644))
@@ -330,7 +327,7 @@
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.20 644))
   (src/port.c (lpmud/39_port.c 1.17.1.9 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.17.1.5 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.76.1.1 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.76.1.2 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7.1.2 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
